Use lombok to generate getters and setters

--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -1,5 +1,6 @@
 view.index.title=Home page
 signup.success=Congratulations {0}! You have successfully signed up.
+signin.already=You have already signed in.
 
 # Validation messages
 notBlank.message = The value may not be empty!
